# claude-cage

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SKILL.md  docker-compose.yml  flake.nix  install.sh  launch  tree.json  universal-node.schema.json
binaries/cage-cli/: Cargo.toml
binaries/cage-tui/: Cargo.toml
cage-web/: Cargo.toml
cage-web/src/: codie_parser.rs  main.rs  subprocess.rs
cage-web/src/middleware/: mod.rs  tier_auth.rs
cage-web/src/routes/: app.rs  codie.rs  consent_gate.rs  cookie_jar.rs  emoji_rewriter.rs  genesis_shield.rs  gentlyos.rs  glyph_registry.rs  health.rs  inbox.rs  mod.rs  models.rs  pages.rs  projects.rs  semantic_chars.rs  sessions.rs  staging.rs  surface.rs  tier.rs  tools.rs  tos_interceptor.rs
cage-web/static/: sse.js  style.css
cage-web/templates/: base.html  codie.html  codie_program.html  consent_gate.html  cookie_jar.html  dashboard.html  emoji_rewriter.html  genesis_shield.html  glyph_registry.html  inbox.html  models.html  node_detail.html  projects.html  semantic_chars.html  session_detail.html  sessions.html  staging.html  surface.html  tier.html  tools.html  tos_interceptor.html  tree.html
cage-web/templates/partials/: cookie_domain.html  events.html  focal_point.html  health.html  inbox_items.html  model_row.html  ports.html  project_detail.html  rings.html  screen_capture.html  session_row.html  tier_badge.html  tool_row.html
crates/data/cage-ipfs/: Cargo.toml
crates/data/cage-ipfs/src/: lib.rs
crates/data/cage-mongodb/: Cargo.toml
crates/data/cage-mongodb/src/: lib.rs
crates/integration/cage-hf/: Cargo.toml
crates/integration/cage-hf/src/: lib.rs
crates/integration/cage-nounproject/: Cargo.toml
crates/integration/cage-nounproject/src/: lib.rs
crates/integration/cage-porkbun/: Cargo.toml
crates/integration/cage-porkbun/src/: lib.rs
crates/intelligence/cage-architect/: Cargo.toml
crates/intelligence/cage-architect/src/: lib.rs
crates/intelligence/cage-docs/: Cargo.toml
crates/intelligence/cage-docs/src/: lib.rs
crates/intelligence/cage-federation/: Cargo.toml
crates/intelligence/cage-federation/src/: lib.rs
crates/intelligence/cage-git/: Cargo.toml
crates/intelligence/cage-git/src/: lib.rs
crates/intelligence/cage-ptc/: Cargo.toml
crates/intelligence/cage-ptc/src/: lib.rs
crates/intelligence/cage-training/: Cargo.toml
crates/intelligence/cage-training/src/: lib.rs
crates/runtime/cage-docker/: Cargo.toml
crates/runtime/cage-docker/src/: lib.rs
crates/runtime/cage-memory/: Cargo.toml
crates/runtime/cage-memory/src/: lib.rs
crates/runtime/cage-observe/: Cargo.toml
crates/runtime/cage-sandbox/: Cargo.toml
crates/runtime/cage-session/: Cargo.toml
docs/: PTC.md  (+88 more)
gentlyos-core/: .gitignore  AGENTIC_SECURITY_DAEMON_ARCHITECTURE.md  ARCHITECTURE.md  AUDIT_COMPLETION_REPORT.md  AUDIT_REPORT.md  BBBCP-SYNTHESTASIA  BOOTABLE_BUILD_SPEC.md  BOTTLENECK_API_IMPLEMENTATION_PLAN.md  BTC_AUDIT_ARCHITECTURE.md  CLAUDE.md  CLAUDE_CLI_INNER_WORKINGS.md  CLAUDE_PROTOCOL.md  CLI_IO_FLOW_MAP.md  Cargo.toml  Dockerfile  Dockerfile.minimal  GENTLYOS_SYSTEM_DOCUMENTATION.md  ODDITIES_REPORT.md  OFFENSIVE_DEFENSE_SYSTEM.md  PROMPT_OUTPUT_HOUSING.md  README.md  SECURITY_MITM_LAYER_PLAN.md  SYNESTHESIA  docker-compose.yml
gentlyos-core/.github/workflows/: ci.yml  release.yml
gentlyos-core/crates/gently-alexandria/: Cargo.toml
gentlyos-core/crates/gently-architect/: Cargo.toml
gentlyos-core/crates/gently-artisan/: Cargo.toml
gentlyos-core/crates/gently-audio/: Cargo.toml
gentlyos-core/crates/gently-brain/: Cargo.toml
gentlyos-core/crates/gently-btc/: Cargo.toml
gentlyos-core/crates/gently-chain/: Cargo.toml
gentlyos-core/crates/gently-cipher/: Cargo.toml
gentlyos-core/crates/gently-codie/: Cargo.toml
gentlyos-core/crates/gently-core/: Cargo.toml
gentlyos-core/crates/gently-dance/: Cargo.toml
gentlyos-core/crates/gently-feed/: Cargo.toml
gentlyos-core/crates/gently-gateway/: Cargo.toml
gentlyos-core/crates/gently-goo/: Cargo.toml
gentlyos-core/crates/gently-guardian/: Cargo.toml
gentlyos-core/crates/gently-inference/: Cargo.toml
gentlyos-core/crates/gently-ipfs/: Cargo.toml
gentlyos-core/crates/gently-mcp/: Cargo.toml
gentlyos-core/crates/gently-micro/: Cargo.toml
gentlyos-core/crates/gently-network/: Cargo.toml
gentlyos-core/crates/gently-ptc/: Cargo.toml
gentlyos-core/crates/gently-py/: Cargo.toml.disabled  gently.pyi  pyproject.toml
gentlyos-core/crates/gently-sandbox/: Cargo.toml
gentlyos-core/crates/gently-search/: Cargo.toml
gentlyos-core/crates/gently-security/: Cargo.toml
gentlyos-core/crates/gently-sim/: Cargo.toml
gentlyos-core/crates/gently-sploit/: Cargo.toml
gentlyos-core/crates/gently-visual/: Cargo.toml
gentlyos-core/crates/gently-web/: Cargo.toml
gentlyos-core/extensions/nvim-gentlyos/: README.md
gentlyos-core/extensions/vscode-gentlyos/: README.md  package.json
gentlyos-core/gently-cli/: Cargo.toml
gentlyos-core/gently-cli/src/: chat.rs  main.rs  report.rs
gentlyos-core/gentlyos-tui/: .gitignore  Cargo.toml
gentlyos-core/gentlyos-tui/src/: app.rs  boneblob.rs  claude.rs  events.rs  llm.rs  main.rs  security.rs  theme.rs  ui.rs  widgets.rs
gentlyos-core/scripts/: crate-builder-bsart.sh  doc-instruct.sh  download_minimax.py  foundation-setup.sh  hf_to_agent.py
gentlyos-core/scripts/deploy/: INSTALL.md  build-all.sh  build-alpine-dev-iso.sh  build-alpine-iso.sh  build-deb.sh  build-docker.sh  build-iso.sh  build-termux.sh  build-virtualbox.sh  flash-usb-dev.sh  flash-usb.sh
gentlyos-core/scripts/headless/: 01-system-base.sh  02-user-ssh.sh  03-network.sh  04-python-pytorch.sh  05-ollama.sh  06-gentlyos.sh  07-services.sh  README.md  bootstrap.sh  config.env
gentlyos-core/security/: apparmor-gentlyos  seccomp-agents.json
gentlyos-core/web/: install.sh
gentlyos-core/web/download/: index.html
projects/test-apps-rust/: Cargo.toml
projects/test-apps-rust/src/: chat_server.rs  codie_runner.rs  ecommerce.rs  kv_store.rs  livestream.rs  realestate.rs  task_api.rs  text_gen.rs  tree_walker.rs
(+451 files in other folders)
