[workspace]
resolver = "2"
members = [
    # TIER 0: FOUNDATION
    "crates/foundation/cage-core",
    "crates/foundation/cage-config",
    "crates/foundation/cage-schema",

    # TIER 1: DATA
    "crates/data/cage-mongodb",
    "crates/data/cage-ipfs",
    "crates/data/cage-embeddings",

    # TIER 2: RUNTIME
    "crates/runtime/cage-docker",
    "crates/runtime/cage-sandbox",
    "crates/runtime/cage-session",
    "crates/runtime/cage-memory",
    "crates/runtime/cage-observe",

    # TIER 3: INTELLIGENCE
    "crates/intelligence/cage-tree",
    "crates/intelligence/cage-ptc",
    "crates/intelligence/cage-architect",
    "crates/intelligence/cage-training",
    "crates/intelligence/cage-docs",
    "crates/intelligence/cage-git",
    "crates/intelligence/cage-federation",

    # TIER 4: INTEGRATION
    "crates/integration/cage-porkbun",
    "crates/integration/cage-nounproject",
    "crates/integration/cage-hf",

    # TIER 5: APPLICATION
    "crates/application/cage-web",
    "crates/application/cage-dashboard",

    # BINARIES
    "binaries/cage-cli",
    "binaries/cage-tui",
]
exclude = [
    "projects/*",
    "cage-web",
    "solana",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Zero2oneZ/claude-cage"

[workspace.dependencies]
# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Docker
bollard = "0.18"

# MongoDB
mongodb = "3.2"
bson = "2.13"

# Git
git2 = { version = "0.20", features = ["vendored-openssl"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Crypto
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
rand = "0.8"

# Time + IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# IPFS
cid = "0.11"
multihash = "0.19"

# Misc
dirs = "5.0"
regex = "1.10"
base64 = "0.22"
url = "2.5"

# Internal crates
cage-core = { path = "crates/foundation/cage-core" }
cage-config = { path = "crates/foundation/cage-config" }
cage-schema = { path = "crates/foundation/cage-schema" }
cage-mongodb = { path = "crates/data/cage-mongodb" }
cage-ipfs = { path = "crates/data/cage-ipfs" }
cage-embeddings = { path = "crates/data/cage-embeddings" }
cage-docker = { path = "crates/runtime/cage-docker" }
cage-sandbox = { path = "crates/runtime/cage-sandbox" }
cage-session = { path = "crates/runtime/cage-session" }
cage-memory = { path = "crates/runtime/cage-memory" }
cage-observe = { path = "crates/runtime/cage-observe" }
cage-tree = { path = "crates/intelligence/cage-tree" }
cage-ptc = { path = "crates/intelligence/cage-ptc" }
cage-architect = { path = "crates/intelligence/cage-architect" }
cage-training = { path = "crates/intelligence/cage-training" }
cage-docs = { path = "crates/intelligence/cage-docs" }
cage-git = { path = "crates/intelligence/cage-git" }
cage-federation = { path = "crates/intelligence/cage-federation" }
cage-porkbun = { path = "crates/integration/cage-porkbun" }
cage-nounproject = { path = "crates/integration/cage-nounproject" }
cage-hf = { path = "crates/integration/cage-hf" }
cage-web = { path = "crates/application/cage-web" }
cage-dashboard = { path = "crates/application/cage-dashboard" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
