[workspace]
resolver = "2"
members = [
    "cage-web",
]
exclude = [
    "projects/*",
    "gentlyos-core",
    "sui",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Zero2oneZ/claude-cage"

[workspace.dependencies]
# Web
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templates
askama = "0.12"
askama_axum = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
