[package]
name = "cage-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cage-web"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors"] }
