[package]
name = "gentlyos-tui"
version = "1.0.0"
edition = "2021"
authors = ["GentlyOS Team"]
description = "FIRE Terminal UI for GentlyOS - Fast, Intuitive, Responsive, Elegant"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1.40", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unicode and text
unicode-width = "0.1"
textwrap = "0.16"

# Random for demo data
rand = "0.8"

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
demo = []
