[package]
name = "test-apps-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kv-store"
path = "src/kv_store.rs"

[[bin]]
name = "chat-server"
path = "src/chat_server.rs"

[[bin]]
name = "task-api"
path = "src/task_api.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
