[package]
name = "test-apps-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kv-store"
path = "src/kv_store.rs"

[[bin]]
name = "chat-server"
path = "src/chat_server.rs"

[[bin]]
name = "task-api"
path = "src/task_api.rs"

[[bin]]
name = "text-gen"
path = "src/text_gen.rs"

[[bin]]
name = "tree-walker"
path = "src/tree_walker.rs"

[[bin]]
name = "codie-runner"
path = "src/codie_runner.rs"

[[bin]]
name = "ecommerce"
path = "src/ecommerce.rs"

[[bin]]
name = "livestream"
path = "src/livestream.rs"

[[bin]]
name = "realestate"
path = "src/realestate.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
