[package]
name = "cage-hf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cage-core = { workspace = true }
cage-embeddings = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
