[package]
name = "cage-nounproject"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cage-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
