[package]
name = "cage-architect"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cage-core = { workspace = true }
cage-tree = { workspace = true }
cage-ptc = { workspace = true }
cage-mongodb = { workspace = true }
cage-ipfs = { workspace = true }
cage-embeddings = { workspace = true }
cage-git = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
