[package]
name = "cage-ptc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cage-core = { workspace = true }
cage-tree = { workspace = true }
cage-mongodb = { workspace = true }
cage-ipfs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
