[package]
name = "cage-training"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cage-core = { workspace = true }
cage-tree = { workspace = true }
cage-ptc = { workspace = true }
cage-mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
