[package]
name = "cage-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cage-core = { workspace = true }
cage-mongodb = { workspace = true }
cage-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
