[package]
name = "gently-alexandria"
version = "0.1.0"
edition = "2021"
description = "The Library Unlocked - Usage-driven distributed knowledge graph"
license = "MIT"

[dependencies]
# Core
gently-core = { path = "../gently-core" }
gently-ipfs = { path = "../gently-ipfs" }
gently-chain = { path = "../gently-chain" }
blake3 = "1.5"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
