[package]
name = "gently-artisan"
version = "1.0.0"
edition = "2021"
description = "BS-ARTISAN: Toroidal knowledge storage with Foam and BARF retrieval"
license = "MIT"

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
